forth/test/fail/test_cont_meta_switch_case_missing_pred.af
fun: cont_meta_switch_case_missing_pred_fail { val key -- out }
  val key switch
    case 100 end
    200
  end
end
